[package]
name = "tsserver-rust"
version = "0.1.0"
edition = "2021"
default-run = "tsserver-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsc-rust = { git = "https://github.com/helixbass/tsc-rust", rev = "d418231" }

[lib]
name = "typescript_services_rust"

[[bin]]
name = "tsserver-rust"
